fix: update cli option