@@ -80,7 +80,8 @@ if [ -z "$JAVA_OPTS_SCRIPT" ]; then
         --add-opens java.base/java.lang=ALL-UNNAMED \
         -Dpolyglot.engine.WarnInterpreterOnly=false \
         -Djava.awt.headless=true -Dfile.encoding=UTF8 \
-        -Djava.util.logging.config.file=config/arcadedb-log.properties"
+        -Djava.util.logging.config.file=config/arcadedb-log.properties \
+        --enable-native-access=ALL-UNNAMED"
 fi
 
 if [ -z "$ARCADEDB_JMX" ]; then
